// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Tabs stateful - dynamic 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-z5a1p4-Wrapper e1lzzkxx0"
  >
    <div
      class="css-1x21rq3-TabBarWrapper e1lzzkxx2"
    >
      <div
        class="css-1qbrtvg-TabBar e1lzzkxx1"
        role="tablist"
      >
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #1
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #2
        </button>
        <button
          class="css-1jt6nsk-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab with scroll!
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #4
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #5
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #6
        </button>
      </div>
    </div>
    <div
      class="css-1eu9ihj-Content e1lzzkxx5"
    >
      <div
        id="test1"
        title="Tab title #1"
      />
      <div
        id="test2"
        title="Tab title #2"
      />
      <div
        id="test3"
        title="Tab with scroll!"
      />
      <div
        id="test4"
        title="Tab title #4"
      />
      <div
        id="test5"
        title="Tab title #5"
      />
      <div
        id="test6"
        title="Tab title #6"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateful - no initial 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-z5a1p4-Wrapper e1lzzkxx0"
  >
    <div
      class="css-1x21rq3-TabBarWrapper e1lzzkxx2"
    >
      <div
        class="css-1qbrtvg-TabBar e1lzzkxx1"
        role="tablist"
      >
        <button
          class="css-1jt6nsk-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #1
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #2
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab with scroll!
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #4
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #5
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #6
        </button>
      </div>
    </div>
    <div
      class="css-1eu9ihj-Content e1lzzkxx5"
    >
      <div
        id="test1"
        title="Tab title #1"
      />
      <div
        id="test2"
        title="Tab title #2"
      />
      <div
        id="test3"
        title="Tab with scroll!"
      />
      <div
        id="test4"
        title="Tab title #4"
      />
      <div
        id="test5"
        title="Tab title #5"
      />
      <div
        id="test6"
        title="Tab title #6"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateful - static 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-z5a1p4-Wrapper e1lzzkxx0"
  >
    <div
      class="css-1x21rq3-TabBarWrapper e1lzzkxx2"
    >
      <div
        class="css-1qbrtvg-TabBar e1lzzkxx1"
        role="tablist"
      >
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          With a function
        </button>
        <button
          class="css-1jt6nsk-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          With markup
        </button>
      </div>
    </div>
    <div
      class="css-1eu9ihj-Content e1lzzkxx5"
    >
      <div
        id="test1"
        title="With a function"
      />
      <div
        id="test2"
        title="With markup"
      >
        <div>
          test2 is always active (but visually hidden)
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - absolute 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-rpkhur-Wrapper e1lzzkxx0"
  >
    <div
      class="css-1x21rq3-TabBarWrapper e1lzzkxx2"
    >
      <div
        class="css-1qbrtvg-TabBar e1lzzkxx1"
        role="tablist"
      >
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #1
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #2
        </button>
        <button
          class="css-1jt6nsk-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab with scroll!
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #4
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #5
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #6
        </button>
      </div>
    </div>
    <div
      class="css-1od9ihz-Content e1lzzkxx5"
    >
      <div
        id="test1"
        title="Tab title #1"
      />
      <div
        id="test2"
        title="Tab title #2"
      />
      <div
        id="test3"
        title="Tab with scroll!"
      />
      <div
        id="test4"
        title="Tab title #4"
      />
      <div
        id="test5"
        title="Tab title #5"
      />
      <div
        id="test6"
        title="Tab title #6"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - bordered 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-1nivq3t-Wrapper e1lzzkxx0"
  >
    <div
      class="css-1x21rq3-TabBarWrapper e1lzzkxx2"
    >
      <div
        class="css-1qbrtvg-TabBar e1lzzkxx1"
        role="tablist"
      >
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #1
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #2
        </button>
        <button
          class="css-1jt6nsk-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab with scroll!
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #4
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #5
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #6
        </button>
      </div>
    </div>
    <div
      class="css-1eu9ihj-Content e1lzzkxx5"
    >
      <div
        id="test1"
        title="Tab title #1"
      />
      <div
        id="test2"
        title="Tab title #2"
      />
      <div
        id="test3"
        title="Tab with scroll!"
      />
      <div
        id="test4"
        title="Tab title #4"
      />
      <div
        id="test5"
        title="Tab title #5"
      />
      <div
        id="test6"
        title="Tab title #6"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - empty 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <p
    class="css-hftiue ejh6i270"
  >
    no panels available
  </p>
</div>
`;

exports[`Storyshots Components|Tabs stateless - no scrolling 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-1nivq3t-Wrapper e1lzzkxx0"
  >
    <div
      class="css-1x21rq3-TabBarWrapper e1lzzkxx2"
    >
      <div
        class="css-1jsscdj-TabBar e1lzzkxx1"
        role="tablist"
      >
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #1
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #2
        </button>
        <button
          class="css-1jt6nsk-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab with scroll!
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #4
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #5
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #6
        </button>
      </div>
    </div>
    <div
      class="css-1eu9ihj-Content e1lzzkxx5"
    >
      <div
        id="test1"
        title="Tab title #1"
      />
      <div
        id="test2"
        title="Tab title #2"
      />
      <div
        id="test3"
        title="Tab with scroll!"
      />
      <div
        id="test4"
        title="Tab title #4"
      />
      <div
        id="test5"
        title="Tab title #5"
      />
      <div
        id="test6"
        title="Tab title #6"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - with tools 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-z5a1p4-Wrapper e1lzzkxx0"
  >
    <div
      class="css-1x21rq3-TabBarWrapper e1lzzkxx2"
    >
      <div
        class="css-1qbrtvg-TabBar e1lzzkxx1"
        role="tablist"
      >
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #1
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #2
        </button>
        <button
          class="css-1jt6nsk-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab with scroll!
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #4
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #5
        </button>
        <button
          class="css-1ghc1c-TabButton e1lzzkxx4"
          role="tab"
          type="button"
        >
          Tab title #6
        </button>
      </div>
      <div
        class="css-1syx3b1-TabBarTools e1lzzkxx3"
      >
        <button
          type="button"
        >
          1
        </button>
        <button
          type="button"
        >
          2
        </button>
      </div>
    </div>
    <div
      class="css-1eu9ihj-Content e1lzzkxx5"
    >
      <div
        id="test1"
        title="Tab title #1"
      />
      <div
        id="test2"
        title="Tab title #2"
      />
      <div
        id="test3"
        title="Tab with scroll!"
      />
      <div
        id="test4"
        title="Tab title #4"
      />
      <div
        id="test5"
        title="Tab title #5"
      />
      <div
        id="test6"
        title="Tab title #6"
      />
    </div>
  </div>
</div>
`;
